@@ -129,6 +129,6 @@ The compatible versions of Django and Python for each Wagtail release are:
 +-------------------+------------------------------+-----------------------------+
 | 2.6               | 2.0, 2.1, 2.2                | 3.5, 3.6, 3.7               |
 +-------------------+------------------------------+-----------------------------+
-| 2.7 LTS           | 2.0, 2.1, 2.2                | 3.5, 3.6, 3.7               |
+| 2.7 LTS           | 2.0, 2.1, 2.2                | 3.5, 3.6, 3.7, 3.8          |
 +-------------------+------------------------------+-----------------------------+
 
